# toronto-bikeshare-2024

./: .gitattributes  .gitignore  README.md  Summary_Findings.docx  api_keys.py  foo.ipynb  graph-hopper-data.ipynb  heatmap.html  main-Copy1.ipynb  main.ipynb  main.py  pyproject.toml  requirements.txt  route_map.html  sample_df.csv  setup.cfg
datasets/: final_sample.csv  locations.csv  lon-lat.csv  sample_every_571_row.csv  station-information.geojson  station_information.csv  station_status.csv  test.csv
docs/: index.html  summary_findings.md
images/: heatmap.html
proposal plan/: Group_3_Toronto_Bike_Share_2024.docx  ~$oup_3_Toronto_Bike_Share_2024.docx
src/datasets/: station_information.csv
src/torontobikeshare/: main.py  pulljson.py
