[metadata]
name = toronto-bikeshare
version = 0.0.1
description = This package analyzes Toronto bike transit system
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
  =src

packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*